static/css/zamboni/files.css
/* ... */
/* Error. */
/* Duplicate. */
#file-viewer.messages-duplicate .line-number.error-duplicate,
#file-viewer.messages-duplicate .diff-bar .error-duplicate,
/* Signing. */
.line-number.error-signing,
.diff-bar .error-signing,
/* All. */
.line-number.error,
.diff-bar .error {
    background-color: #D81E00;
    color: white;
}

div.diff-bar {
    margin-left: -1px;
}

.waiting {
    background-image: url(../../img/zamboni/loading-white.gif);
    background-repeat: no-repeat;
    background-position: left top;
    padding-left: 2em;
}

#commands th {
    padding: 0 0 1px;
}

#commands code {
    display: block;
    font-weight: bold;
    color: white;
    background-color: darkgray;
    text-align: center;
    min-width: 1.1em;
    padding: 0px 2px;
    border-radius: 2px;
    -moz-border-radius: 2px;
    cursor: pointer;
}

#commands td {
    padding: 0 0 0 .5em;
}

#diff, #content {
    padding-left: 11px;
}

.diff-bar.js-hidden + #diff, .diff-bar.js-hidden + #content {
    padding-left: 0;
}

#diff-wrapper {
    position: relative;
}

.diff-bar {
    border: 1px solid gray;
    width: 10px;
    position: absolute;
    height: 200px;
}

.diff-bar a {
    display: block;
    width: 100%;
    border: 0px solid gray;
}

.diff-bar a:hover {
    text-decoration: none;
}

.diff-bar .add {
    border-color: #33aa33;
}

.diff-bar .delete {
    border-color: #aa3434;
}

.diff-bar-viewport {
    position: absolute;
    left: 0;
    right: 0;
    min-height: 2px;
    border: 1px solid rgba(0, 0, 0, .4) !important;
}

#tooltip {
    max-width: 100%;
}

#tooltip > span {
    white-space: pre-wrap;
    text-align: left;
    max-width: 70ex;
}


.message {
    display:none;

    position: absolute;
    padding-left: 10px;
    top: -.2em;
    left: 100%;

    position: absolute;
    z-index: 16385;
    text-align: left;
    font-size: 11px;
}

.diff-bar .message {
    top: -.8em;
    margin-top: -4px;
}

.message-inner {
    position: relative;
    padding: 0.5em 1em;

    border: 1px solid #fff;
    border-radius: .8em;
    background: #2A4364;
    color: white;
    border-radius: .8em;
    -moz-border-radius: .8em;
    -webkit-border-radius: .8em;
}

.message a {
    color: white;
    font-weight: bold;
    text-decoration: underline !important;
}

.message-inner > div {
    line-height: 1.2em;
    width: 70ex;
    white-space: pre-wrap;
}
.message-inner > div + div {
    margin-top: 1em;
}

.message p {
    margin: 1em 0;
}

.message-inner:before {
    content: "\00a0";
    display: block; /* reduce the damage in FF3.0 */
    position: absolute;
    width: 0;
    height: 0;
    margin-top: -6px;
    top: 1.1em;
    left: -16px;
    border: solid transparent;
    border-width: 6px 9px;
    border-right-color: #2A4364;
    pointer-events: none;
}

.message-container {
    position: relative;
    overflow: visible !important;
}

/* Notices. */
#file-viewer.messages-all .message-container.message-notice:hover > .message,
#file-viewer.messages-signing .message-container.message-notice-signing:hover > .message,
#file-viewer.messages-ignored .message-container.message-notice-ignored:hover > .message,
/* Warnings. */
#file-viewer.messages-all .message-container.message-warning:hover > .message,
#file-viewer.messages-signing .message-container.message-warning-signing:hover > .message,
#file-viewer.messages-ignored .message-container.message-warning-ignored:hover > .message,
/* Errors. */
.message-container.message-error:hover > .message,
.message-container.message-error-signing:hover > .message,
#file-viewer.messages-ignored .message-container.message-error-ignored:hover > .message {
    display: block;
}


.number-combo {
    display: inline-block;
}

.number-combo-button-up,
.number-combo-button-down {
    padding-left: .2em;
}

.number-combo-button-up:hover,
.number-combo-button-down:hover,
.number-combo-button-up:focus,
.number-combo-button-down:focus,
.number-combo-button-up:active,
.number-combo-button-down:active {
    text-decoration: none;
}

.number-combo-button-up:hover,
.number-combo-button-down:hover {
    text-shadow: #000 0 0 .01em;
}

#tab-stops-container {
    display: none;
    margin: .5em 0;
}

#toggle-known-container {
    margin-top: .3em;
}

#jetpack-version {
    margin: .5em 0;
}


option.status-public {
    font-weight: bold;
}

option.status-lite {
    font-style: italic;
}

